# mfrc522_micropython_library

./: LICENSE  README.md  metadata.cfg  setup.cfg  setup.py
.github/workflows/: publish.yml
mfrc522_micropython/: mfrc522.py
