[metadata]
name = mfrc522
version = 1.0
author = Damian Cyrana
description = The MicroPython library for the MFRC522 RFID reader for Raspberry Pi Pico
description-file = README.md
long_description_content_type = text/markdown
url = https://github.com/damiancyrana/mfrc522_micropython_library
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mfrc522

[wheel]
universal = 1
